creation de 3 profils en html + photo + details

--- a/tinder.html
+++ b/tinder.html
@@ -10,7 +10,40 @@
     <link rel="stylesheet" type="text/css" media="screen" href="tinder.css">
 </head>
 <body>
-
+    <main>
+        <img src="assets/logo.png">
+        <div class="profiles">
+          <div class="profile">
+            <div class="profile__image" style="background-image: url('assets/cruella.png');"></div>
+            <div class="profile__infos">
+              <div class="profile__name">Cruella <span class="profile__age">54</span></div>
+              <div class="profile__description">"Ma seule et unique passion, j'adore les belles fourrures. Je n'aime que ça au monde."</div>
+            </div>
+          </div>
+          <div class="profile">
+            <div class="profile__image" style="background-image: url('assets/mask.png');"></div>
+            <div class="profile__infos">
+              <div class="profile__name">The Mask <span class="profile__age">41</span></div>
+              <div class="profile__description">"L'orange, c'est la santé."</div>
+            </div>
+          </div>
+          <div class="profile">
+            <div class="profile__image" style="background-image: url('assets/tarzan.png');"></div>
+            <div class="profile__infos">
+              <div class="profile__name">Tarzan <span class="profile__age">33</span></div>
+              <div class="profile__description">"Moi Tarzan, toi Jane!"</div>
+            </div>
+          </div>
+        </div>
+        <div class="bottombar">
+          <div class="bottombar__button">
+            <img src="assets/croix.png">
+          </div>
+          <div class="bottombar__button">
+            <img src="assets/coeur.png">
+          </div>
+        </div>
+      </main>
 
     <script src="tinder.js"></script>
 </body>
