ajout du favicon , du logo et du nom du site

--- a/tinder.html
+++ b/tinder.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tinder</title>
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/png" sizes="16x16" href="assets/logo.png"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="tinder.css">
 </head>
 <body>
     <main>
-        <img src="assets/logo.png">
+        <p style="color:rgb(211, 70, 94); font-weight: 900;"><img src="assets/logo.png">La Mécanique du coeur</p>
         <div class="profiles">
           <div class="profile">
             <div class="profile__image" style="background-image: url('assets/cruella.png');"></div>
