alignement en css du nom du site avec son logo

--- a/tinder.html
+++ b/tinder.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tinder</title>
+    <title>La Mécanique du coeur</title>
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/png" sizes="16x16" href="assets/logo.png"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -14,28 +14,32 @@
 <body>
     <main>
         <p style="color:rgb(211, 70, 94); font-weight: 900;"><img src="assets/logo.png">La Mécanique du coeur</p>
+        <br>
         <div class="profiles">
-          <div class="profile">
-            <div class="profile__image" style="background-image: url('assets/cruella.png');"></div>
-            <div class="profile__infos">
-              <div class="profile__name">Cruella <span class="profile__age">54</span></div>
-              <div class="profile__description">"Ma seule et unique passion, j'adore les belles fourrures. Je n'aime que ça au monde."</div>
+            <div class="profile">
+                <div class="profile__image" style="background-image: url('assets/cruella.png');"></div>
+                <div class="profile__infos">
+                <div class="profile__name">Cruella <span class="profile__age">54</span></div>
+                <div class="profile__description">"Ma seule et unique passion, j'adore les belles fourrures. Je n'aime que ça au monde."</div>
+                </div>
+                <br>
             </div>
-          </div>
-          <div class="profile">
-            <div class="profile__image" style="background-image: url('assets/mask.png');"></div>
-            <div class="profile__infos">
-              <div class="profile__name">The Mask <span class="profile__age">41</span></div>
-              <div class="profile__description">"L'orange, c'est la santé."</div>
+            <div class="profile">
+                <div class="profile__image" style="background-image: url('assets/mask.png');"></div>
+                <div class="profile__infos">
+                <div class="profile__name">The Mask <span class="profile__age">41</span></div>
+                <div class="profile__description">"L'orange, c'est la santé."</div>
+                </div>
+                <br>
             </div>
-          </div>
-          <div class="profile">
-            <div class="profile__image" style="background-image: url('assets/tarzan.png');"></div>
-            <div class="profile__infos">
-              <div class="profile__name">Tarzan <span class="profile__age">33</span></div>
-              <div class="profile__description">"Moi Tarzan, toi Jane!"</div>
+            <div class="profile">
+                <div class="profile__image" style="background-image: url('assets/tarzan.png');"></div>
+                <div class="profile__infos">
+                <div class="profile__name">Tarzan <span class="profile__age">33</span></div>
+                <div class="profile__description">"Moi Tarzan, toi Jane!"</div>
+                </div>
+                <br>
             </div>
-          </div>
         </div>
         <div class="bottombar">
           <div class="bottombar__button">
