--- a/tinder.html
+++ b/tinder.html
@@ -7,9 +7,14 @@
     <title>La Mécanique du coeur</title>
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/png" sizes="16x16" href="assets/logo.png"/>
+    <!-- Google Fonts pour utiliser des polices de haute qualité -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <!-- Police Google -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="tinder.css">
+    <!-- hammerjs est une bibliothèque JavaScript utilisée pour effectuer des actions comme le panoramique, le balayage, la rotation et le zoom sur les gestes tactiles. -->
+    <script src="https://ajax.googleapis.com/ajax/libs/hammerjs/2.0.8/hammer.min.js"></script>
+
 </head>
 <body>
     <main>
